# lecture-testing-task

./: .gitignore
.github/workflows/: ci.yml
05_hw/: CMakeLists.txt  benchmark.cpp  stack.c  test_stack.cpp
